media-keys: Fix suspend button not locking the screen

Because we call UPower synchronously, so cannot process
notifications during that time. Same bug as bug 655924,
and same fix as 31fe6c18b9ca1034815e4cbffa6e6ea1336e4aec

https://bugzilla.gnome.org/show_bug.cgi?id=660267

Conflicts:

	configure.ac